--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -225,7 +225,7 @@ nav.navbar li > a.home {
         color:#999999;
 }
 
-#app-navbar .dropdown-toggle {
+nav .dropdown-toggle {
     padding-top: 0;
     margin-right: .5em;
 }
