--- a/views/data.tt
+++ b/views/data.tt
@@ -21,33 +21,43 @@
     <div class="row">
         <div class="col-md-9">
             <div class="btn-toolbar" role="toolbar">
-                [% IF config.gads.legacy_menu %]
-                    [% PROCESS viewtype_buttons %]
-                [% END %]
+
+                [% PROCESS viewtype_buttons %]
+
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_view">
                             Current view: [% IF v %][% v.name | html %][% ELSE %]All data[% END %] <span class="caret"></span>
                     </button>
                     <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
-                        [% IF config.gads.legacy_menu %]
+			[% IF layout.user_can("view_create") %]
+			    <li [% IF page=="view/0" %]class="active"[% END %]><a href="[% url.page %]/view/0">Add a view</a></li>
+			[% END %]
+
+			[% IF v %]
                             [% IF layout.user_can("view_create") %]
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0">Create new view</a></li>
-                            [% END %]
-                            [% IF v %]
-                                [% IF layout.user_can("view_create") %]
-                                    [% IF v.writable %]
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/[% v.id %]">Edit this view</a></li>
-                                    [% END %]
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/view/0?clone=[% v.id %]">Clone this view</a></li>
-                                [% END %]
-                                <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me</a></li>
-                            [% END %]
-                            [% IF layout.user_can("layout") %]
-                                <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_views_other_user">Manage views of another user...</a></li>
-                            [% END %]
-                            <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">Historic view...</a></li>
-                            <li role="presentation" class="divider"></li>
+				[% IF v.writable %]
+				    <li [% IF page=="view" %]class="active"[% END %]><a href="/view/[% v.id %]">Edit current view</a></li>
+				[% END %]
+				<li [% IF page=="view/clone" %]class="active"[% END %]><a href="/view/0?clone=[% v.id %]">Clone current view</a></li>
+			    [% END %]
+                            <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me...</a></li>
+			[% END %]
+
+                        [% IF layout.user_can("layout") %]
+                            <li role="presentation">
+                                <a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_views_other_user">
+                                    Manage views of another user...
+                                </a>
+                            </li>
                         [% END %]
+                        <li role="presentation">
+                            <a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">
+                                Historic view...
+                            </a>
+                        </li>
+
+                        <li role="presentation" class="divider"></li>
+
                         [% first = 1 %]
                         [% FOREACH ve IN user_views %]
                             [% IF first AND NOT ve.global AND not ve.is_admin %]
@@ -93,22 +103,12 @@
                     </div>
                 [% END %]
 
-                [% IF config.gads.legacy_menu %]
+                [% IF layout.user_can("bulk_update") OR layout.user_can("delete") %]
                     <div class="btn-group">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
                                 Action <span class="caret"></span>
                         </button>
                         <ul id="menu_action" class="dropdown-menu" role="menu">
-                            [% IF user_can_create %]
-                                [% IF user.has_draft(layout.instance_id) %]
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/edit/">Continue draft record</a></li>
-                                [% ELSE %]
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/edit/">New record</a></li>
-                                [% END %]
-                            [% END %]
-                            [% IF layout.user_can("link") AND show_link %]
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/link/">New linked record</a></li>
-                            [% END %]
                             [% IF search %]
                                 [% sel_type = "records in this search" %]
                             [% ELSIF viewtype == "timeline" %]
@@ -124,16 +124,10 @@
                                 <li role="presentation"><a role="menuitem" id="delete_href" class="bulk_href" tabindex="-1" data-toggle="modal" data-target="#modal_delete" style="cursor: pointer">Delete all [% sel_type %]...</a>
                             [% END %]
                             [% IF viewtype == "table" AND records.size AND layout.user_can("download") %]
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/data?download">Download all records in view</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/data?download">Download records in current view</a></li>
                             [% END %]
                         </ul>
                     </div>
-                [% END %]
-
-                [% IF config.gads.legacy_menu %]
-                    [% PROCESS search_form.tt %]
-                [% ELSE %]
-                    [% PROCESS viewtype_buttons %]
                 [% END %]
 
                 [% IF viewtype == "timeline" %]
