--- a/views/snippets/record_edit.tt
+++ b/views/snippets/record_edit.tt
@@ -18,3 +18,35 @@
         [% END %]
     </ul>
 </div>
+
+[% IF record.user_can_delete %]
+   <!-- Modal -->
+    <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form role="form" method="post" enctype="multipart/form-data">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Delete record</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this record? The version history of the record will
+                        also be deleted.</p>
+                    [% IF record.child_record_ids.size %]
+                        <h5>The following child records will also be deleted:</h5>
+                        <ul>
+                            [% FOREACH rec IN record.child_record_ids %]
+                                <li>[% rec %]</li>
+                            [% END %]
+                        </ul>
+                    [% END %]
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="submit" value="[% record.current_id %]" class="btn btn-primary submit_button" name="delete">Delete</button>
+                </div>
+                </form>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+[% END %]
