--- a/views/snippets/record_edit.tt
+++ b/views/snippets/record_edit.tt
@@ -24,7 +24,7 @@
     <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form role="form" method="post" enctype="multipart/form-data">
+                <form role="form" method="post" enctype="multipart/form-data" action="/edit/">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title" id="myModalLabel">Delete record</h4>
