--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -75,9 +75,6 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" id="user-menu">
-                    <li [% IF 0 %]class="active"[% END %]>
-                        <a href="[% url.page %]/audit/">User logs</a>
-                    </li>
                     <li><a href="[% url.page %]/account/detail">My details</a></li>
                     <li class="divider"></li>
                     <li><a href="[% url.page %]/logout">Logout</a></li>
@@ -126,6 +123,10 @@
             <li class="divider"></li>
             <li [% IF page=="group" %]class="active"[% END %]><a href="[% url.page %]/group/">Manage groups</a></li>
             <li [% IF page=="group/0" %]class="active"[% END %]><a href="[% url.page %]/group/0">Add a group</a></li>
+            <li class="divider"></li>
+            <li [% IF page=="audit" %]class="active"[% END %]>
+                <a href="[% url.page %]/audit/">User audit logs</a>
+            </li>
         </ul>
     </li>
 [% END %]
