--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -227,7 +227,8 @@ nav .dropdown-toggle {
   margin-bottom: .5em; }
 
 .breadcrumbs {
-  border: 1px solid #ccccdd;
+  border: solid #e7e7e7;
+  border-width: 1px 0px 1px 0px;
   background-color: #fff; }
 
 .quicksearch {
@@ -270,8 +271,7 @@ nav .dropdown-toggle {
 
 .breadcrumbs .item a {
   color: #034575;
-  text-decoration: none;
-  border-bottom: 1px solid #ccc; }
+  text-decoration: none; }
 
 .nav {
   list-style: none;
@@ -350,8 +350,7 @@ html {
 
 header {
   border-top: 5px solid #1460aa;
-  padding-bottom: 1.5em;
-  border-bottom: 1px solid #e7e7e7; }
+  padding-bottom: 1.5em; }
 
 .hscroll {
   overflow-x: visible;
