--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -14,7 +14,6 @@ html {
 
 header {
   border-top: 5px solid $primary-navy;
-  padding-bottom: 1.5em;
 }
 
 .hscroll{
@@ -28,7 +27,7 @@ body {
 }
 
 main.container-fluid {
-    margin: 1em;
+    margin: 0 1em 0 1em;
 }
 
 a {
