Fix name indented under personal settings heading

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -300,7 +300,8 @@ nav .heading {
   font-weight: 500; }
 
 nav .dropdown-toggle {
-  font-size: 1em; }
+  font-size: 1em;
+  text-align: left; }
 
 nav button .heading {
   margin-bottom: .3em; }
