--- a/views/layout.tt
+++ b/views/layout.tt
@@ -48,12 +48,17 @@
     </div>
 [% END %]
 
+[% BLOCK field_type_settings %]
+    <h3>Field type settings</h3>
+
+    [% PROCESS field_type_properties %]
+
+[% END %]
+
 [% BLOCK advanced_field_settings %]
     <h3>Advanced settings</h3>
 
     [% PROCESS field_options %]
-
-    [% PROCESS field_type_properties %]
 
     <div class="form-group">
         <label for="name_short"><span style="font-weight:normal">Short name: [% whats_this('modalhelp_name_short') %]</span></label>
@@ -442,6 +447,9 @@
                 <a role="tab" aria-controls="#basic-panel" href="#basic-panel" id="basic-tab" aria-selected="true">Basic settings</a>
             </li>
             <li role="presentation">
+                <a role="tab" aria-controls="#fieldtype-panel" href="#fieldtype-panel" id="fieldtype-tab" aria-selected="false">Field type settings</a>
+            </li>
+            <li role="presentation">
                 <a role="tab" aria-controls="#advanced-panel" href="#advanced-panel" id="advanced-tab" aria-selected="false">Advanced settings</a>
             </li>
             <li role="presentation">
@@ -454,6 +462,10 @@
 
         <section role="tabpanel" id="basic-panel" aria-labelledby="basic-tab" class="active">
             [% PROCESS field_properties %]
+        </section>
+
+        <section role="tabpanel" id="fieldtype-panel" aria-labelledby="fieldtype-tab">
+            [% PROCESS field_type_settings %]
         </section>
 
         <section role="tabpanel" id="advanced-panel" aria-labelledby="advanced-tab">
