--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -130,7 +130,7 @@
 [% END %]
 
 [% BLOCK table_selector %]
-    [% IF instances.count > 1 %]
+    [% IF instances.size > 1 %]
         <li class="dropdown">
             <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-label="Table menu"
                 aria-expanded="false" aria-haspopup="true" aria-controls="table-menu">
