--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1743,14 +1743,8 @@ small.search_term {
 
 .select-widget .form-control {
   margin-bottom: .1em;
-  border: 1px solid #336699;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.075);
-  border-radius: 5px;
   min-height: 35px;
   height: auto; }
-
-.select-widget.multi .form-control {
-  padding-bottom: 0; }
 
 .select-widget .form-control-search {
   width: 100%;
@@ -1802,9 +1796,10 @@ small.search_term {
   text-align: left; }
 
 .select-widget [aria-expanded] {
+  background: transparent;
   border: none;
   position: absolute;
-  right: 1.5em; }
+  right: .5em; }
 
 .select-widget.single .change {
   margin-top: -.15em;
@@ -1822,8 +1817,7 @@ small.search_term {
 
 .select-widget [aria-expanded="false"] .collapsed,
 .select-widget [aria-expanded="true"] .expanded {
-  display: inline;
-  margin-top: .2em; }
+  display: inline; }
 
 .select-widget ul {
   margin: 0;
@@ -1841,7 +1835,6 @@ small.search_term {
   font-style: italic; }
 
 .select-widget .current {
-  padding-bottom: .4em;
   width: 92%;
   text-align: left;
   display: inline-block;
@@ -1853,7 +1846,8 @@ small.search_term {
   right: 0;
   z-index: 3;
   background-color: #ffffff;
-  border: 1px solid #336699;
+  border: 1px solid #ccc;
+  box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.075);
   max-height: 19em;
   overflow-x: hidden;
   overflow-y: scroll; }
