--- a/views/edit.tt
+++ b/views/edit.tt
@@ -627,10 +627,12 @@
                 </button>
             </div>
             <ul hidden class="available [% details && 'with-details' %]" id="[% field %]_available_values">
-                <li class="search">
-                    <input type="search" class="form-control-search">
-                    <span hidden class="form-control-search__clear">&times;</span>
-                </li>
+                [% IF values.size >= 10 %]
+                    <li class="search">
+                        <input type="search" class="form-control-search">
+                        <span hidden class="form-control-search__clear">&times;</span>
+                    </li>
+                [% END %]
             [% FOREACH value IN values %]
                 [% NEXT IF value.deleted %]
                 [% checked = editvalue.id_hash.${value.id} %]
@@ -698,10 +700,12 @@
                 </button>
             </div>
             <ul hidden class="available [% details && 'with-details' %]" id="[% field %]_available_values">
-                <li class="search">
-                    <input type="search" class="form-control-search">
-                    <span hidden class="form-control-search__clear">&times;</span>
-                </li>
+                [% IF values.size >= 10 %]
+                    <li class="search">
+                        <input type="search" class="form-control-search">
+                        <span hidden class="form-control-search__clear">&times;</span>
+                    </li>
+                [% END %]
             [% FOREACH value IN values %]
                 [% NEXT IF value.deleted %]
                 [% checked = editvalue.id_hash.${value.id} %]
