Add blank option to single select widget

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1835,6 +1835,7 @@ small.search_term {
 .select-widget .current .none-selected {
   display: none; }
 
+.select-widget .current .current__blank,
 .select-widget .current.empty .none-selected {
   display: inline;
   font-style: italic; }
@@ -1869,6 +1870,10 @@ small.search_term {
   margin: 0;
   padding: 0;
   overflow: hidden; }
+
+.select-widget .available .answer--blank label {
+  font-weight: normal;
+  font-style: italic; }
 
 .select-widget .available .answer:hover {
   background-color: #ededed; }
