--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1438,6 +1438,9 @@ small.search_term {
 .table-rows-pagination .table-pagination {
   display: inline-block; }
 
+.data-table th {
+  position: relative; }
+
 .data-table th * {
   color: #000; }
 
@@ -1450,6 +1453,8 @@ small.search_term {
   max-width: 15em;
   text-overflow: ellipsis;
   -ms-text-overflow: ellipsis; }
+  .data-table thead button:hover + .popover {
+    display: block; }
 
 .data-table thead .column-name {
   font-weight: bold;
@@ -1461,8 +1466,22 @@ small.search_term {
   word-break: keep-all;
   word-break: break-word;
   overflow-wrap: break-word;
-  margin-top: 1.2em;
-  padding: .5em; }
+  padding: .5em;
+  margin-top: 6px;
+  top: auto !important;
+  /* Overwrite the custom inline style as applied by positionDisclosure(). */
+  left: 8px !important;
+  /* Overwrite the custom inline style as applied by positionDisclosure(). */
+  /* Add a ::before to expand the hover area so there's no gap anymore between the button and the popover. */ }
+  .data-table thead .popover::before {
+    content: "";
+    width: 100%;
+    height: 7px;
+    position: absolute;
+    left: 0;
+    top: -7px; }
+  .data-table thead .popover:hover {
+    display: block; }
 
 .data-table thead .helptext {
   border-bottom: 1px solid #ccc; }
